# PipelineScheduler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  jetson.Dockerfile  jetson_profiler.py
Data_analysis/: 100.csv  AIcity.csv  AIcity.json  AIcity_balance.csv  bandwidth.cites  factory.csv  gt_campus.csv  s01_person.json  s36_person.json
analyze/: agent_spezialization.py  analyze_object_counts.py  count_objects.py  database_conn.py  database_connection.py  final_figures.py  main.py  prepare-ai-city.py  rl_analyzes.py  run_log_analyzes.py
cmake/: FindTensorRT.cmake
dockerfiles/: DOCKERFILE-base-amd64  DOCKERFILE-final-amd64  DOCKERFILE-torch-amd64  DOCKERFILE-torch21-jp512  DOCKERFILE-torch25-jp61  Dockerfile  README  docker-compose.jetson.yml  docker-compose.server.yml
jsons/: Nodes.json  README  SToffloading.json  SToffloading_aicity.json  age.json  arcface.json  bandwidth-limited-old.json  bandwidth.json  carbrand.json  carcolor.json  cardamage.json  container_lib.json  datasource.json  emotionnet.json  equipdetect.json  fashioncolor.json  firedetect.json  geardetect.json  gender.json  metricsserver.json  movenet.json  object_count.json  platedet.json  retina1face.json  retinaface.json  sink.json  yolov5.json  yolov5_aicity.json  yolov5l1280.json
jsons/bandwidths/: bandwidth_limits0.json  bandwidth_limits1.json  bandwidth_limits10.json  bandwidth_limits11.json  bandwidth_limits12.json  bandwidth_limits13.json  bandwidth_limits14.json  bandwidth_limits15.json  bandwidth_limits16.json  bandwidth_limits17.json  bandwidth_limits18.json  bandwidth_limits19.json  bandwidth_limits2.json  bandwidth_limits20.json  bandwidth_limits3.json  bandwidth_limits4.json  bandwidth_limits5.json  bandwidth_limits6.json  bandwidth_limits7.json  bandwidth_limits8.json  bandwidth_limits9.json
jsons/cpp_containers/: age.json  arcface.json  carbrand.json  carcolor.json  cardamage.json  container_lib.json  datasource.json  emotionnet.json  equipdetect.json  fashioncolor.json  firedetect.json  geardetect.json  gender.json  movenet.json  platedet.json  retina1face.json  retinaface.json  yolov5.json
jsons/experiments/: 100reduced-slo-jlf.json  100reduced-slo-ppp.json  100reduced-slo-rim.json  30-fps-dis.json  30-fps-ppp.json  30-fps-rim.json  50reduced-slo-dis.json  50reduced-slo-jlf.json  50reduced-slo-ppp.json  README.md  ablation-onlyserver-ppp.json  ablation-staticbatch-ppp.json  alldevice.json  bandwidth-limiting-dis.json  bandwidth-limiting-ppp.json  bandwidth-limiting-rim.json  base-experiment.json  campus-bcedge.json  campus-fcpo.json  campus-ppp.json  campus-tutti.json  cluster_info.json  continual-aicity-bcedge.json  continual-aicity-fcpo.json  continual-learning-fcpo.json  dbg-full-run-ppp.json  dbg-full-run-rim.json  factory-bcedge.json  factory-fcpo.json  factory-ppp.json  factory-tutti.json  full-run-bcedge.json  full-run-dis.json  full-run-fcpo.json  full-run-jlf.json  full-run-ppp.json  full-run-rim.json  full-run-single-fcpo.json  hyperparameter-sensitivity-fcpo.json  long-runtime-ppp.json  (+9 more)
jsons/experiments/bcedge/: campus.json  continual-aicity.json  factory.json  new-full-run.json
jsons/experiments/distream/: 100reduced-slo.json  30-fps.json  50reduced-slo.json  bandwidth-limiting.json  full-run.json  new-full-run.json
jsons/experiments/fcpo/: campus.json  continual-aicity.json  continual-learning.json  factory.json  full-run.json  hyperparameter-sensitivity.json  main-apisrl-fcpo.json  main-apisrl-ippo.json  main-apisrl.json  new-full-run.json  test.json
jsons/experiments/ippo/: campus.json  continual-aicity.json  continual-learning.json  factory.json
jsons/experiments/jellyfish/: 100reduced-slo.json  30-fps.json  50reduced-slo.json  bandwidth-limiting.json  campus.json  factory.json  full-run.json
libs/baseprocessors/: basebatcher.cpp  basebatchinferencer.cpp  basebboxcropper.cpp  basebboxcropperaugmentation.cpp  basebboxcropperverifier.cpp  baseclassifier.cpp  basekpointextractor.cpp  basepreprocessor.cpp  baseprocessor.h  basereqbatcher.cpp  basesink.cpp  basesoftmaxclassifier.cpp  data_reader.cpp  data_reader.h
libs/communicator/: communicator.h  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
libs/container_agent/: CMakeLists.txt  container_agent.cpp  container_agent.h
libs/container_agent/batch_learning/: CMakeLists.txt  batch_learning.cpp  batch_learning.h
libs/container_agent/batch_learning/cmake/: batch_learning-config.cmake.in
libs/controller/: CMakeLists.txt  client.py  client_add.py  controller.cpp  controller.h  main.cpp  pipelines.cpp  scheduling-dis.cpp  scheduling-fcpo.cpp  scheduling-jlf.cpp  scheduling-ppp.cpp  scheduling-rim.cpp  scheduling-tuti.cpp  server.py
libs/controller/apis_rl/: CMakeLists.txt  PAHC.cpp  PAHC.h  meta_bandit.cpp  meta_bandit.h
libs/controller/apis_rl/cmake/: apis_rl-config.cmake.in
libs/device_agent/: CMakeLists.txt  device_agent.cpp  device_agent.h  main.cpp
libs/fcpo_learning/: CMakeLists.txt  bcedge.cpp  bcedge.h  edgevision.cpp  edgevision.h  fcpo_learning.cpp  fcpo_learning.h  offline_training.cpp
libs/fcpo_learning/cmake/: fcpo_learning-config.cmake.in
libs/local_optimization/: CMakeLists.txt  bcedge.cpp  bcedge.h  edgevision.h  fcpo_learning.cpp  fcpo_learning.h  fcpo_learning_ippo.cpp  local_optimization.h  momappo_fcpo_learning.cpp  offline_training.cpp
libs/local_optimization/cmake/: local_optimization-config.cmake.in
libs/micro_optimization/: CMakeLists.txt  apis_fcrl.cpp  apis_fcrl.h  bcedge.h  edgevision.h  fcpo_learning.cpp  fcpo_learning.h  micro_optimization.h  offline_training.cpp
libs/micro_optimization/cmake/: micro_optimization-config.cmake.in
libs/microservice/: microservice.cpp  microservice.h
libs/misc/: CMakeLists.txt  misc.cpp  misc.h
python_containers/: container_agent.py  update_protobuf.sh
scripts/: api_example.py  api_example2.py  api_example3.py  create_json_from_5g_dataset.py  delete_table_with_keyword.sh  perform_experiment.sh  prepare_robot_datasets.py  run_controller.exp  stop_containers_with_keywords.sh
src/: main.cpp
(+137 files in other folders)
